--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["hdelecki <hdelecki@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 POMDPModelTools = "08074719-1b2a-587c-a292-00f91cc44415"
